feat: add github-readme-stats.vercel.app/api/top-langs

--- a/main.mustache
+++ b/main.mustache
@@ -29,6 +29,10 @@
 <!--START_SECTION:waka-->
 <!--END_SECTION:waka-->
 
+<p>
+  <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=sinlov&layout=compact" />
+</p>
+
 <p align="right">
   <a href="https://github.com/{{name}}/{{name}}/actions">
     <img alt="{{git_action_main_publish_name}}"
