feat: let git_action_task_waka_readme_name render at main page

--- a/main.mustache
+++ b/main.mustache
@@ -35,6 +35,8 @@
 
 <p align="right">
   <a href="https://github.com/{{name}}/{{name}}/actions">
+    <img alt="{{git_action_task_waka_readme_name}}"
+      src="https://github.com/{{name}}/{{name}}/workflows/{{git_action_task_waka_readme_name}}/badge.svg?branch={{branch}}">
     <img alt="{{git_action_main_publish_name}}"
       src="https://github.com/{{name}}/{{name}}/workflows/{{git_action_main_publish_name}}/badge.svg?branch={{branch}}">
   </a>
