feat: add details of showing

--- a/main.mustache
+++ b/main.mustache
@@ -16,21 +16,44 @@
   </a>
 </p>
 
-<p>
-  Today is <b>{{date}}</b> <br />
-  My current city <b>{{city}}</b> weather is: <img src="{{city_weather_icon}}" width="20" /> <i>{{city_weather}}</i>
-  <li>temperature : <b>{{city_temperature}} °C</b> , feels like  : <b>{{city_feels_like}} °C</b></br></li>
-  <li>humidity    : <b>{{city_humidity}}%</b> , wind speed  : <b>{{wind_speed}} {{wind_speed_units}}</b></br></li>
-  <li>sun rises at: <b>{{sun_rise}}</b> , sets at: <b>{{sun_set}}</b></li>
-</p>
-
 <p>Recent coding record</p>
 
 <!--START_SECTION:waka-->
 <!--END_SECTION:waka-->
 
 <p>
-  <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=sinlov&layout=compact" />
+  <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=sinlov&layout=compact&hide=cmake,makefile,batchfile,emacs,css,html,yaml" />
+</p>
+
+<details>
+<p align="center">
+  <a href="https://github.com/sinlov">
+    <img src="http://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=sinlov&theme=transparent" />
+  </a>
+  <a href="https://github.com/sinlov">
+    <img src="https://github-readme-streak-stats.herokuapp.com/?user=sinlov&hide_border=true&card_width=338&theme=transparent" />
+  </a>
+  <a href="https://github.com/sinlov">
+    <img src="http://github-profile-summary-cards.vercel.app/api/cards/stats?username=sinlov&theme=transparent" />
+  </a>
+  <a href="https://github.com/sinlov">
+    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=sinlov&card_width=699&hide_border=true&theme=transparent&hide=cmake,makefile,batchfile,emacs,css,html,yaml" />
+  </a>
+</p>
+</details>
+
+<p align="center">
+  <a href="https://github.com/sinlov">
+    <img src="https://komarev.com/ghpvc/?username=sinlov&color=blue&style=flat)" />
+  </a>
+</p>
+
+<p>
+  Today is <b>{{date}}</b> <br />
+  My current city <b>{{city}}</b> weather is: <img src="{{city_weather_icon}}" width="20" /> <i>{{city_weather}}</i>
+  <li>temperature : <b>{{city_temperature}} °C</b> , feels like  : <b>{{city_feels_like}} °C</b></br></li>
+  <li>humidity    : <b>{{city_humidity}}%</b> , wind speed  : <b>{{wind_speed}} {{wind_speed_units}}</b></br></li>
+  <li>sun rises at: <b>{{sun_rise}}</b> , sets at: <b>{{sun_set}}</b></li>
 </p>
 
 <p align="right">
