feat: update badge_info and info of github-profile

--- a/main.mustache
+++ b/main.mustache
@@ -21,8 +21,9 @@
 <!--START_SECTION:waka-->
 <!--END_SECTION:waka-->
 
-<p>
-  <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=sinlov&layout=compact&hide=cmake,makefile,batchfile,emacs,css,html,yaml" />
+<p align="center">
+  <img width="40%" src="https://github-readme-stats.vercel.app/api/top-langs/?username=sinlov&layout=compact&hide=cmake,makefile,batchfile,emacs,css,html,yaml" />
+  <img width="56%" src="https://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=sinlov&include_all_commits=true&role=OWNER,ORGANIZATION_MEMBER&count_private=true&show_icons=true" />
 </p>
 
 <details>
