docs: update GitHub Actions badge URLs
- Update the URL format for GitHub Actions badges to use the new `actions/workflows` path
- This change affects both the Wakatime and main publish workflow badges

--- a/main.mustache
+++ b/main.mustache
@@ -60,9 +60,9 @@
 <p align="right">
   <a href="https://github.com/{{name}}/{{name}}/actions">
     <img alt="{{git_action_task_waka_readme_name}}"
-      src="https://github.com/{{name}}/{{name}}/workflows/{{git_action_task_waka_readme_name}}/badge.svg?branch={{branch}}">
+      src="https://github.com/{{name}}/{{name}}/actions/workflows/{{git_action_task_waka_readme_name}}/badge.svg?branch={{branch}}">
     <img alt="{{git_action_main_publish_name}}"
-      src="https://github.com/{{name}}/{{name}}/workflows/{{git_action_main_publish_name}}/badge.svg?branch={{branch}}">
+      src="https://github.com/{{name}}/{{name}}/actions/workflows/{{git_action_main_publish_name}}/badge.svg?branch={{branch}}">
   </a>
   {{#show_travis}}
   <a href="https://travis-ci.com/github/{{name}}/{{name}}">
